...
import { 
  YStack, 
  XStack, 
  Text, 
  Button, 
  Card,
  Spinner
} from 'tamagui';
import { useRouter } from 'expo-router';
import SuccessPopup from '../_EasyUse/[id]/redeem/SuccessPopup';
import { isUserLoggedIn, fetchAPI } from '@/app/utils/authAPI';
import { devLog } from '@/app/utils/devLogger';

...
